# examsCore42

./: .gitignore  CMakeLists.txt  Level 01.md  README.md  clean_executables.sh
exam_rank05/: CMakeLists.txt
exam_rank05/level-01/biginit/: bigint-vector.cpp  bigint.cpp  bigint.hpp  bigint01.cpp  bigint01.hpp  bigint02.cpp  bigint02.hpp  bigint_test  follow-bigint.md  main.cpp  subject.txt
exam_rank05/level-01/biginit/bigint-compact/: bigint.cpp  bigint.hpp  follow-bigint-exam.md
exam_rank05/level-01/biginit/bigint-str/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/bigint-vector/: bigint-vector.cpp  bigint-vector.hpp  bigint02.cpp  bigint02.hpp  main.cpp
exam_rank05/level-01/biginit/pract003/: bigint.cpp
exam_rank05/level-01/biginit/pract01/: bigint.cpp  bigint.hpp  main.cpp
exam_rank05/level-01/biginit/pract02/: bigint.hpp
exam_rank05/level-01/biginit/practice-01/: bigint.cpp  bigint.hpp  main.cpp
exam_rank05/level-01/biginit/practice-02/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/practice-03/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/practice-04/: bigint.hpp
exam_rank05/level-01/biginit/practice-06/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/practice-07/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/test-compact/: bigint.cpp  bigint.hpp
exam_rank05/level-01/biginit/try01/: bigint.cpp  bigint.hpp
exam_rank05/level-01/polyset/: array_bag.hpp  array_tree_breakdown.md  bag.hpp  follow-polyset.md  implementation_plan.md  main.cpp  polyset_test  searchable_bag.hpp  tree_bag.hpp
exam_rank05/level-01/polyset/base/: main.c
exam_rank05/level-01/polyset/original/: follow-polyset.md  searchable_array_bag.cpp  searchable_array_bag.hpp  searchable_tree_bag.hpp  searchable_tree_bg.cpp  (+1 more)
exam_rank05/level-01/practice/: \  bigint.cpp  bigint.hpp  life.c
exam_rank05/level-01/vect2/: subject-vect2.txt  vect2.hpp
exam_rank05/level-02/bsq/: bsq.c  bsq.h  bsq_exam.c  subject.txt
exam_rank05/level-02/life/: how-works-life.md  life.c
(+617 files in other folders)
