cmake_minimum_required(VERSION 3.28)
project(42_exam C)

set(CMAKE_C_STANDARD 11)

add_executable(42_exam
#        practice_42/practice/rev_wstr.c
#        practice_42/practice/ft_split.c
#        practice_42/level_04/rev_wstr/rev_wstr.c
        practice_42/level_02/max/max.c
        last_one/nivel02/ft_strrev/ft_strrev.c
        #        main.c
)
